--- a/TerrainDemo/TerrainDemo.vcxproj.filters
+++ b/TerrainDemo/TerrainDemo.vcxproj.filters
@@ -210,6 +210,9 @@
     <ClInclude Include="Test\TestState.h">
       <Filter>Header Files\Test</Filter>
     </ClInclude>
+    <ClInclude Include="Graphics\GeometryData.h">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Base\FreeCamera.cpp">
@@ -292,6 +295,9 @@
     </ClCompile>
     <ClCompile Include="State\StateManager.cpp">
       <Filter>Source Files\State</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics\GeometryData.cpp">
+      <Filter>Source Files\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
